Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10903

SLES validation: sanity test_180c: Cannot allocate memory on write

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for sarah_lw <wei3.liu@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/18098872-3d58-11e8-95c0-52540065bddc

      server: 2.10.3 EL7

      client: 2.10.3 SLES12 SP3, installed from rpms in iso

      test_180c failed with the following error:

      test_180c returned 1
      
      [15695.554859] Lustre: lustre-OST0000: Connection restored to 39665ad4-ef75-8040-dd31-41fb0deef85c (at 10.2.4.39@tcp)
      [15695.555982] Lustre: Skipped 3 previous similar messages
      [15697.206168] Lustre: DEBUG MARKER: == sanity test 180b: test obdecho directly on obdfilter ============================================== 23:22:37 (1523427757)
      [15697.636441] Lustre: DEBUG MARKER: onyx-24vm2.onyx.hpdd.intel.com: executing load_module obdecho/obdecho
      [15697.729480] Lustre: Echo OBD driver; http://www.lustre.org/
      [15700.522532] Lustre: DEBUG MARKER: == sanity test 180c: test huge bulk I/O size on obdfilter, don't LASSERT ============================= 23:22:40 (1523427760)
      [15700.982161] Lustre: DEBUG MARKER: onyx-24vm2.onyx.hpdd.intel.com: executing load_module obdecho/obdecho
      [15700.991821] Lustre: Echo OBD driver; http://www.lustre.org/
      [15702.553521] lctl: page allocation failure: order:6, mode:0x10c050
      [15702.554345] CPU: 1 PID: 15065 Comm: lctl Tainted: G OE ------------ 3.10.0-693.11.6.el7_lustre.x86_64 #1
      [15702.555414] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [15702.556063] Call Trace:
      [15702.556343] [<ffffffff816a5e7d>] dump_stack+0x19/0x1b
      [15702.556909] [<ffffffff8118a510>] warn_alloc_failed+0x110/0x180
      [15702.557523] [<ffffffff816a1e7a>] __alloc_pages_slowpath+0x6b6/0x724
      [15702.558224] [<ffffffff8118eaa5>] __alloc_pages_nodemask+0x405/0x420
      [15702.558888] [<ffffffff811d3038>] alloc_pages_current+0x98/0x110
      [15702.559510] [<ffffffff8118930e>] __get_free_pages+0xe/0x40
      [15702.560135] [<ffffffff811de9fe>] kmalloc_order_trace+0x2e/0xa0
      [15702.560733] [<ffffffff811e2591>] __kmalloc+0x211/0x230
      [15702.561301] [<ffffffffc101cb95>] echo_client_prep_commit.isra.49+0xa5/0xc30 [obdecho]
      [15702.562223] [<ffffffffc07bb78f>] ? lu_object_find_slice+0x1f/0x90 [obdclass]
      [15702.562981] [<ffffffffc07bfdd0>] ? cl_env_put+0x140/0x1d0 [obdclass]
      [15702.563653] [<ffffffffc102039f>] echo_client_iocontrol+0x95f/0x1bd0 [obdecho]
      [15702.564450] [<ffffffffc067fbc7>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [15702.565171] [<ffffffffc079be69>] ? lprocfs_counter_add+0xf9/0x160 [obdclass]
      [15702.565926] [<ffffffffc0787033>] class_handle_ioctl+0x1923/0x1db0 [obdclass]
      [15702.566672] [<ffffffff812b3b78>] ? security_capable+0x18/0x20
      [15702.567341] [<ffffffffc076c5d2>] obd_class_ioctl+0xd2/0x170 [obdclass]
      [15702.568037] [<ffffffff8121710d>] do_vfs_ioctl+0x33d/0x540
      [15702.568615] [<ffffffff81202b90>] ? vfs_write+0x160/0x1e0
      [15702.569233] [<ffffffff812173b1>] SyS_ioctl+0xa1/0xc0
      [15702.569771] [<ffffffff816b8930>] ? system_call_after_swapgs+0x15d/0x214
      [15702.570461] [<ffffffff816b89fd>] system_call_fastpath+0x16/0x1b
      [15702.571128] [<ffffffff816b889d>] ? system_call_after_swapgs+0xca/0x214
      [15702.571794] Mem-Info:
      [15702.572037] active_anon:1549 inactive_anon:25514 isolated_anon:0
       active_file:78914 inactive_file:184569 isolated_file:0
       unevictable:0 dirty:451 writeback:0 unstable:0
       slab_reclaimable:8606 slab_unreclaimable:6456
       mapped:3311 shmem:13129 pagetables:1722 bounce:0
       free:44518 free_pcp:9 free_cma:0
      [15702.575313] Node 0 DMA free:7448kB min:416kB low:520kB high:624kB active_anon:148kB inactive_anon:656kB active_file:560kB inactive_file:2060kB unevictable:0kB isolated(anon):0kB isolated(file):0kB present:15992kB managed:15908kB mlocked:0kB dirty:16kB writeback:0kB mapped:20kB shmem:240kB slab_reclaimable:168kB slab_unreclaimable:180kB kernel_stack:0kB pagetables:84kB unstable:0kB bounce:0kB free_pcp:0kB local_pcp:0kB free_cma:0kB writeback_tmp:0kB pages_scanned:0 all_unreclaimable? no
      [15702.579654] lowmem_reserve[]: 0 1662 1662 1662
      [15702.580260] Node 0 DMA32 free:170624kB min:44636kB low:55792kB high:66952kB active_anon:6048kB inactive_anon:101400kB active_file:315096kB inactive_file:736216kB unevictable:0kB isolated(anon):0kB isolated(file):0kB present:2080744kB managed:1704692kB mlocked:0kB dirty:1788kB writeback:0kB mapped:13224kB shmem:52276kB slab_reclaimable:34256kB slab_unreclaimable:25644kB kernel_stack:3648kB pagetables:6804kB unstable:0kB bounce:0kB free_pcp:32kB local_pcp:0kB free_cma:0kB writeback_tmp:0kB pages_scanned:0 all_unreclaimable? no
      [15702.584827] lowmem_reserve[]: 0 0 0 0
      [15702.585321] Node 0 DMA: 14*4kB (EM) 10*8kB (UEM) 12*16kB (UM) 13*32kB (UM) 15*64kB (EM) 11*128kB (UEM) 7*256kB (UEM) 5*512kB (UEM) 0*1024kB 0*2048kB 0*4096kB = 7464kB
      [15702.587332] Node 0 DMA32: 187*4kB (UEM) 70*8kB (UEM) 465*16kB (EM) 1889*32kB (UEM) 925*64kB (UEM) 324*128kB (UM) 1*256kB (U) 0*512kB 0*1024kB 0*2048kB 0*4096kB = 170124kB
      [15702.589313] Node 0 hugepages_total=0 hugepages_free=0 hugepages_surp=0 hugepages_size=1048576kB
      [15702.590188] Node 0 hugepages_total=0 hugepages_free=0 hugepages_surp=0 hugepages_size=2048kB
      [15702.591129] 279596 total pagecache pages
      [15702.591567] 2965 pages in swap cache
      [15702.591932] Swap cache stats: add 6110, delete 3145, find 2021/2031
      [15702.592579] Free swap = 3647156kB
      [15702.592997] Total swap = 3671036kB
      [15702.593367] 524184 pages RAM
      [15702.593709] 0 pages HighMem/MovableOnly
      [15702.594111] 94034 pages reserved
      [15703.239047] Lustre: DEBUG MARKER: sanity test_180c: @@@@@@ FAIL: test_180c failed with 4
      
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_180c - test_180c returned 1

            adilger Andreas Dilger
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: